<resources>
    <string name="app_name">IntervalMe</string>
    <string name="plus_text">+</string>
    <string name="minus_text">-</string>
    <string name="duration_placeholder">000</string>
    <string name="seconds">Seconds</string>
    <string name="go_to_list">Go To List</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="parent_id">Parent ID</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="duration">Duration</string>
    <string name="edit_interval_button">Edit interval button</string>
    <string name="update">Update</string>
    <string name="add_interval">Add Interval</string>
    <string name="start_all_intervals">Start all intervals</string>
    <string name="remove_interval_button">Remove interval button</string>
    <string name="swap_selected_intervals">Swap Selected Intervals</string>
    <string name="debug_fix_group_positions">DEBUG: Fix Group Positions</string>
    <string name="edit">Edit</string>
    <string name="create_etc_group">Create missing intervals group</string>
    <string name="group_not_found_label" type="id">Group Not Found</string>
    <string name="create_sample_groups">Create sample groups</string>
    <string name="duplicate_selected">Duplicate Selected</string>
    <string name="loops">Loops:</string>
    <string name="title_activity_interval_properties">IntervalProperties</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="clear_database">Clear Database</string>
    <string name="properties">Properties</string>
    <string name="extra_properties">Extra Properties</string>
    <string name="reset_changes">Reset Changes</string>
    <string name="title_activity_settings">Settings</string>

    <string name="user_interface">User Interface</string>
    <string name="pref_description_ui_invert_add_minus">Swap Add and Minus buttons in interval add screen</string>
    <string name="pref_title_ui_invert_add_minus">Invert Add and Minus</string>
    <string name="pref_description_ui_debug_menu_items">Show extra menu items for debugging</string>
    <string name="pref_title_ui_debug_menu_items">Show Debug Menu Items</string>
    <string name="intervals">Intervals</string>
    <string name="analytics">Analytics</string>
    <string name="routines">Routines</string>
    <string name="title_activity_routine_manage">RoutineManageActivity</string>
    <string name="exercises">Exercises</string>
    <string name="routine_name">Routine Name</string>
    <string name="add_routine">Add</string>
    <string name="add_item">+ Item</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="toggle_edit_buttons">Toggle Edit Buttons</string>
    <string name="templates">Templates</string>
    <string name="routine">Routine</string>
    <string name="value_for_exercise">Value</string>
    <string name="description">Description</string>
    <string name="mark_done">Mark Done</string>
    <string name="delete">Delete</string>
    <string name="values">Values</string>
    <string name="show_done_routines">Show Done Routines</string>
    <string name="hide_done_routines">Hide Done Routines</string>
    <string name="unmark_done">Unmark Done</string>
    <string name="template">Template</string>
    <string name="add_exercise_item">Add Exercise Item</string>
    <string name="pref_description_ui_show_incomplete_routine_menu_items">Always show incomplete routines when viewing completed routines in lists</string>
    <string name="pref_title_ui_show_incomplete_routine_menu_items">Always show incomplete routines</string>
    <string name="dialog_message_copy_routine_to_template">Copy Routine to a template?</string>
    <string name="dialog_title_copy_routine_to_template">Copy To Template</string>
    <string name="okay">Okay</string>
    <string name="cancel">cancel</string>
    <string name="copied_routine_to_template">Copied Routine To Templates</string>
</resources>
