<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="ui_invert_add_minus"
        android:summary="@string/pref_description_ui_invert_add_minus"
        android:title="@string/pref_title_ui_invert_add_minus" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="ui_debug_menu_items"
        android:summary="@string/pref_description_ui_debug_menu_items"
        android:title="@string/pref_title_ui_debug_menu_items" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="ui_show_incomplete_routine_menu_items"
        android:summary="@string/pref_description_ui_show_incomplete_routine_menu_items"
        android:title="@string/pref_title_ui_show_incomplete_routine_menu_items" />

</PreferenceScreen>