<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/routine_list_menu_add"
        android:title="@string/add"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add_white_24dp"
        />
    <item android:id="@+id/routine_list_toggle_edit_buttons"
        android:title="@string/toggle_edit_buttons"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_mode_edit_strike_out_animated_24dp"
        />
    <item android:id="@+id/routine_list_toggle_show_done"
        app:showAsAction="withText"
        android:title="@string/show_done_routines"
        />
    <item
        android:id="@+id/action_routine_to_settings"
        android:title="@string/action_settings"
        app:showAsAction="withText"

        />

</menu>