<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/intervalChildNameTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:text="@string/name" />
    <TextView
        android:id="@+id/intervalChildDurationTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/duration_placeholder"
        android:layout_marginStart="8dp"/>

    <ImageButton
        android:id="@+id/intervalChildStartBtn"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_weight="1"
        android:text="@string/start"
        app:srcCompat="@drawable/ic_play_arrow_white_24dp"
        tools:text="Start/Pause" />

    <ImageButton
        android:id="@+id/intervalChildStopBtn"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_weight="1"
        android:text="@string/stop"
        app:srcCompat="@drawable/ic_stop_white_24dp"
        tools:text="Stop" />

</LinearLayout>
