<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/routineGroupMoreButton"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:tint="@color/gray_active"
        app:layout_constraintBottom_toBottomOf="@+id/routineSingleName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/routineSingleName"
        app:srcCompat="@drawable/ic_expand_more_24dp" />

    <TextView
        android:id="@+id/routineSingleName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/routine"
        android:textAppearance="@style/Input.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/routineListGroupDeleteBtn"
        app:layout_constraintStart_toEndOf="@+id/routineGroupMoreButton"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/routineListGroupEditBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/edit_interval_button"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/routineListGroupDeleteBtn"
        app:layout_constraintEnd_toStartOf="@+id/routineGroupMenuView"
        app:layout_constraintTop_toTopOf="@+id/routineListGroupDeleteBtn"
        app:srcCompat="@drawable/ic_mode_edit_white_12dp" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/routineListGroupDeleteBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/edit_interval_button"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/routineSingleName"
        app:layout_constraintEnd_toStartOf="@+id/routineListGroupEditBtn"
        app:layout_constraintTop_toTopOf="@+id/routineSingleName"
        app:srcCompat="@drawable/ic_remove_white_12dp" />

    <TextView
        android:visibility="gone"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routineSingleName" />

    <TextView
        android:visibility="gone"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/values"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <ImageView
        android:visibility="gone"
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:srcCompat="@drawable/ic_done_black_24dp" />

    <ImageButton
        android:id="@+id/routineGroupMenuView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/routineListGroupEditBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/routineListGroupEditBtn"
        app:srcCompat="@drawable/ic_more_vert_black_12dp" />

</android.support.constraint.ConstraintLayout>